# educationalProjects

./: .gitignore
C/UNIX_Professionalnoe_programmirovanie_3-e_izd_2018/: apue.h
C/UNIX_Professionalnoe_programmirovanie_3-e_izd_2018/directory_file_listing/: CMakeLists.txt  main.c
C/network_programming/getaddrinfo_example/: CMakeLists.txt  main.c
C/network_programming/unix_network_development_applications/Time_and_Date_TCP_Client_and_Simple_Time_and_Date_Server/tcp_client_for_determining_time_and_date_IPv4/: CMakeLists.txt  README.md  config.h  error.h  socket.h
C/solutions_to_C_book_Exercises_Kernighan_Ritchie_3rd_Edition/1_10/: CMakeLists.txt  README.md  main.c
backend/: .env.sample  .gitignore  docker-compose.yml  manage.py  requirements.txt
backend/config/: settings.py  urls.py
backend/sim_app/: admin.py  apps.py  models.py  urls.py  views.py
backend/sim_app/utils/: sim_bank_utils.py
c++/class/decorator_coffee_consol/: Additives.cpp  Additives.h  Beverage.cpp  Beverage.h  CMakeLists.txt  DarkMocha.cpp  DarkMocha.h  DarkRoast.cpp  DarkRoast.h  Latte.cpp  Latte.h  Milk.cpp  Milk.h  Mocha.cpp  Mocha.h  README.md  Whip.cpp  Whip.h  WhiteMocha.cpp  WhiteMocha.h  main.cpp  pch.h
c++/class/duck/: CMakeLists.txt  Duck.cpp  Duck.h  Flight.cpp  Flight.h  Flyable.cpp  Flyable.h  Hunter.cpp  Hunter.h  Lake.cpp  Lake.h  MallardDuck.cpp  MallardDuck.h  MedicineDuck.cpp  MedicineDuck.h  NotFlight.cpp  NotFlight.h  NotQuack.cpp  NotQuack.h  Quack.cpp  Quack.h  Quackable.cpp  Quackable.h  RedHatDuck.cpp  RedHatDuck.h  RubberDuck.cpp  RubberDuck.h  main.cpp  stdafx.h
(+1852 files in other folders)
